--- a/pie-dark.css
+++ b/pie-dark.css
@@ -1,4 +1,4 @@
-@include-when-export url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Source+Sans+Pro&display=swap');
+/* @include-when-export url('https://fonts.googleapis.com/css2?family=Fira+Code&family=Source+Sans+Pro&display=swap');
 
 @font-face {
   font-family: 'Source Sans Pro';
@@ -27,30 +27,43 @@
   font-family: 'Fira Code';
   src: url('pie/FiraCode-Bold.woff2') format('woff2'), url('pie/FiraCode-Bold.woff') format('woff');
   font-weight: 700;
-}
+} */
+
 
 :root {
-  --side-bar-bg-color: #272b40;
+  --side-bar-bg-color: #22252b;
   --control-text-color: #999;
-  --select-text-bg-color: #ff7a6679;
-  --select-text-font-color: #f0f0f0;
+  --select-text-bg-color: #6e7992;
+  /* --select-text-font-color: #ddd; */
   --active-file-text-color: #f0f0f0;
-  --active-file-border-color: #f22f27;
-  --active-file-bg-color: #1f2335;
-  --item-hover-bg-color: #3b4057;
+  --active-file-border-color: #c678dd;
+  --active-file-bg-color: #525868;
+  /* --item-hover-bg-color: greenyellow; */
+  --item-hover-bg-color: #343842;
   --item-hover-text-color: #f0f0f0;
-  --primary-color: #f22f27;
-  --bg-color: #272b40;
+  --primary-color: #abb2bf;
+  --bg-color: #282c34;
   --window-border: #393550;
   --border-color: #393550;
+  /* --window-border: red;
+  --border-color: red; */
   --text-color: #d9d9d9;
   --rawblock-edit-panel-bd: #1f2335;
-  --focus-ring-color: #ff5d52;
+  --focus-ring-color: #c678dd;
   --search-select-bg-color: #f5f5f5;
   --search-select-text-color: #1f2335;
 
   --search-hit-bg-color: #bfbfbf;
   --search-hit-text-color: #1f2335;
+
+
+  --strong-text-color: #c678dd;
+  --code-bg-color-: #232834;
+  --code-text-color-:#abb2bf;
+
+  --selected-bg-color: #525868;
+  /* --selected-bg-color: #c9d7ff; */
+  
 
   /* 中性色 */
   --mid-13: #ffffff;
@@ -68,7 +81,7 @@
   --mid-1: #000000;
 
   /* 主题色 */
-  --main-10: #ffd4cc;
+  /* --main-10: #ffd4cc;
   --main-9: #ffafa3;
   --main-8: #ff887a;
   --main-7: #ff5d52;
@@ -77,11 +90,11 @@
   --main-4: #a60a0f;
   --main-3: #80010a;
   --main-2: #590009;
-  --main-1: #330007;
+  --main-1: #330007; */
 
   /* 字体 */
-  --font-normal: 'Source Sans Pro', 'MiSans', '等距更纱黑体 SC', 'Microsoft YaHei', 'Helvetica Neue', Arial, sans-serif;
-  --font-code: 'Fira Code', Monaco, Consolas, 'MiSans', '等距更纱黑体 SC', 'Microsoft YaHei', sans-serif;
+  --font-normal:'Microsoft YaHei', 'JetBrains Mono', 'Source Sans Pro', 'MiSans', 'Helvetica Neue', Arial, sans-serif;
+  --font-code: 'JetBrains Mono', Monaco, Consolas, 'MiSans', '等距更纱黑体 SC', 'Microsoft YaHei', sans-serif;
 }
 
 html {
@@ -124,6 +137,18 @@ footer.ty-footer {
   line-height: 2rem;
 }
 
+#write ol>li,
+#write ul>li {
+    color: #b87bd8;
+    font-weight: bold;
+}
+
+#write ol>li>*,
+#write ul>li>* {
+    color: #ddd;
+    font-weight: normal;
+}
+
 #write > ul:first-child,
 #write > ol:first-child {
   margin-top: 30px;
@@ -138,7 +163,7 @@ body > *:last-child {
 }
 
 a {
-  color: var(--main-6);
+  color: var(--strong-text-color);
   font-weight: 500;
   padding: 0 2px;
   text-decoration: none;
@@ -146,8 +171,8 @@ a {
 
 /* 链接 */
 #write a {
-  border-bottom: 1px solid var(--main-6);
-  color: var(--main-6);
+  border-bottom: 1px solid var(--strong-text-color);
+  color: var(--strong-text-color);
   text-decoration: none;
 }
 
@@ -165,8 +190,8 @@ a {
 }
 
 #write a:hover {
-  border-bottom: 2px solid var(--main-6);
-  color: var(--main-7);
+  border-bottom: 2px solid var(--strong-text-color);
+  color: var(--strong-text-color);
 }
 
 h1,
@@ -226,7 +251,7 @@ h1:after {
   margin: 0.2em auto 0;
   width: 100px;
   height: 2px;
-  border-bottom: 2px dashed var(--main-6);
+  border-bottom: 2px solid var(--strong-text-color);
 }
 
 h2 {
@@ -234,7 +259,7 @@ h2 {
   padding-left: 6px;
   line-height: 1.4;
   font-size: 1.6em;
-  border-left: 6px solid var(--main-6);
+  border-left: 6px solid var(--strong-text-color);
 }
 
 h3 {
@@ -247,7 +272,7 @@ h3 {
 h3:before {
   content: '';
   border-radius: 50%;
-  background-color: var(--main-5);
+  background-color: var(--strong-text-color);
   display: inline-block;
   width: 6px;
   height: 6px;
@@ -262,9 +287,9 @@ h3:before {
 #write > h4.md-focus:before {
   width: auto;
   height: auto;
-  background-color: var(--main-5);
-  color: var(--mid-10);
-  border: 1px solid var(--main-5);
+  background-color: var(--selected-bg-color);
+  color: var(--strong-text-color);
+  border: 1px solid var(--selected-bg-color);
 }
 
 h4 {
@@ -274,7 +299,7 @@ h4 {
 
 /*--- 四级标题左边的小短线 ---*/
 h4:before {
-  background-color: var(--main-4);
+  background-color: var(--selected-bg-color);
   content: '';
   width: 6px;
   display: inline-block;
@@ -312,7 +337,8 @@ hr {
   height: 1px;
   padding: 0;
   margin: 46px auto 64px;
-  background-color: var(--main-4);
+  background-color: var(--selected-bg-color);
+  /* background-color: red; */
   border: 0;
   overflow: hidden;
   box-sizing: content-box;
@@ -383,8 +409,8 @@ ol:last-child {
 blockquote {
   position: relative;
   border: none;
-  border-left: 2px solid var(--main-6);
-  color: var(--mid-8);
+  border-left: 2px solid var(--strong-text-color);
+  color: var(--strong-text-color);
   font-size: 1em;
   font-style: normal;
   padding: 24px 16px 12px;
@@ -398,7 +424,7 @@ blockquote blockquote {
 }
 
 blockquote a {
-  color: var(--main-4);
+  color: var(--strong-text-color);
 }
 
 blockquote:before {
@@ -406,7 +432,7 @@ blockquote:before {
   position: absolute;
   left: 12px;
   top: 0;
-  color: var(--main-6);
+  color: var(--strong-text-color);
   font-size: 2em;
   font-family: Arial, serif;
   line-height: 1em;
@@ -427,7 +453,7 @@ table tr {
 
 table tr:nth-child(2n),
 thead {
-  background-color: #202336;
+  background-color: var(--code-bg-color-);
 }
 
 table tr th {
@@ -457,13 +483,13 @@ table tr td:last-child {
 }
 
 #write table thead th {
-  background-color: #202336;
+  background-color: var(--code-bg-color-);
   text-align: center;
 }
 
 #write strong {
   padding: 0 1px;
-  color: #f8f8f8;
+  color: #b87bd8;
 }
 
 #write em {
@@ -474,7 +500,7 @@ table tr td:last-child {
   border-right: none;
 }
 
-/* 代码块 */
+/* 内联代码块 */
 #write .md-fences {
   -webkit-font-smoothing: initial;
   margin: 1.8rem 0 2rem !important;
@@ -505,8 +531,9 @@ tt {
   border-radius: 3px;
   font-family: var(--font-code) !important;
   font-size: 0.92rem;
-  color: var(--main-6);
-  background-color: #ffb5b333;
+  /* color: var(--strong-text-color); */
+  color: #df93ff;
+  background-color: var(--selected-bg-color);
 }
 
 #write code {
@@ -514,8 +541,8 @@ tt {
 }
 
 #write .md-footnote {
-  color: var(--main-6);
-  background-color: var(--main-1);
+  color: var(--strong-text-color);
+  background-color: var(--selected-bg-color);
 }
 
 /* 流程图块 */
@@ -525,13 +552,13 @@ tt {
 }
 
 #write .md-focus .md-diagram-panel {
-  border: 1px solid var(--main-4);
+  border: 1px solid var(--strong-text-color);
   border-radius: 4px;
 }
 
 /* heighlight. */
 #write mark {
-  background-color: var(--main-6);
+  background-color: var(--strong-text-color);
   border-radius: 2px;
   padding: 2px 4px;
   margin: 0 2px;
@@ -561,7 +588,7 @@ tt {
   font-size: 0.8rem;
   color: var(--mid-1);
   border-radius: 2px;
-  border: 1px solid var(--main-4);
+  border: 1px solid var(--strong-text-color);
   margin-top: -0.4rem;
   transition: all 0.2s linear;
 }
@@ -571,8 +598,8 @@ tt {
   content: '\2714';
   font-size: 0.625rem;
   color: var(--mid-1);
-  border: 1px solid var(--main-6);
-  background-color: var(--main-6);
+  border: 1px solid var(--strong-text-color);
+  background-color: var(--strong-text-color);
 }
 
 @media print {
@@ -689,7 +716,7 @@ tt {
 
 .form-control:focus {
   border-color: var(--active-file-border-color);
-  box-shadow: 0 0 8px #f22f2755;
+  box-shadow: 0 0 8px var(--select-text-bg-color);
 }
 
 #typora-quick-open {
@@ -728,15 +755,16 @@ footer {
   border-bottom: 1px solid var(--border-color);
 }
 
+/* 左侧文件栏 */
 .file-list-item.active {
-  background: var(--active-file-bg-color);
+  background: #343842;
   color: var(--active-file-text-color);
-  border-left: 4px solid var(--main-6);
+  border-left: 4px solid var(--active-file-border-color);
 }
 
 .file-tree-node.active > .file-node-background {
-  background-color: var(--active-file-bg-color);
-  border-left: 4px solid var(--main-6);
+  background-color: #343842;
+  border-left: 4px solid var(--active-file-border-color);
   border-color: var(--active-file-border-color);
 }
 
@@ -745,11 +773,25 @@ footer {
   color: var(--mid-8);
 }
 
+.footer-item:hover,
+  #outline-btn:hover {
+  background-color: var(--active-file-bg-color);
+  color: var(--strong-text-color);
+}
+
+/* outline 大纲 */
+.outline-item:hover {
+  color: var(--strong-text-color);
+}
+.pin-outline .outline-active {
+  color: var(--strong-text-color);
+}
+
 /* 底部按钮 */
 .footer-item:hover,
 .sidebar-footer-item:hover {
   background: var(--item-hover-bg-color);
-  color: var(--item-hover-text-color);
+  color: var(--strong-text-color);
 }
 
 /* 退出显示源码 */
@@ -762,7 +804,7 @@ footer {
 
 /* 暂时只直到作用于 显示隐藏侧边栏按钮 */
 #outline-btn:hover {
-  color: var(--item-hover-text-color);
+  color: var(--strong-text-color);
 }
 
 /* 滚动条的滑块 */
@@ -817,24 +859,31 @@ button.btn-default:not([disabled]):hover,
 }
 
 /* ----------------- 代码块主题 ----------------- */
+.CodeMirror {
+  padding: 1rem;
+  font-family: var(--primary-color);
+}
 
 .cm-s-inner.CodeMirror {
   padding: 0.8rem 0 1rem;
-  background-color: #1f2335;
-  color: #f0f0f0;
+  background-color: var(--code-bg-color-);
+  /* background-color: #1f2335; */
+  color: var(--primary-color-);
   border-radius: 4px;
 }
 
 .cm-s-inner .CodeMirror-gutters {
-  background: #1f2335;
-  color: #676e95;
+  /* background: #fff; */
+  background: var(--code-bg-color-);
+  color: var(--primary-color);
   border: none;
 }
 
 .cm-s-inner .CodeMirror-guttermarker,
 .cm-s-inner .CodeMirror-guttermarker-subtle,
 .cm-s-inner .CodeMirror-linenumber {
-  color: #676e95;
+  color: var(--primary-color);
+  background-color: var(--code-bg-color-);
 }
 
 .cm-s-inner .CodeMirror-cursor {
@@ -842,45 +891,36 @@ button.btn-default:not([disabled]):hover,
 }
 
 .cm-s-inner div.CodeMirror-selected {
-  background: rgba(113, 124, 180, 0.2);
+  /* background: rgba(113, 124, 180, 0.2); */
+  background: greenyellow;
 }
 
 .cm-s-inner.CodeMirror-focused div.CodeMirror-selected {
   background: rgba(113, 124, 180, 0.2);
+  /* background: greenyellow; */
 }
-
-/*
-.cm-s-inner .CodeMirror-line::selection,
-.cm-s-inner .CodeMirror-line > span::selection,
-.cm-s-inner .CodeMirror-line > span > span::selection {
-  background: rgba(128, 203, 196, 0.2);
-}
-
-.cm-s-inner .CodeMirror-line::-moz-selection,
-.cm-s-inner .CodeMirror-line > span::-moz-selection,
-.cm-s-inner .CodeMirror-line > span > span::-moz-selection {
-  background: rgba(128, 203, 196, 0.2);
-} */
-
-/* .cm-s-inner .CodeMirror-activeline-background {
-    background: rgba(255, 255, 255, 0.5);
-  } */
 
 .cm-s-inner .cm-keyword {
-  color: #c792ea;
+  color: #c678dd;
 }
 
 .cm-s-inner .cm-operator {
-  color: #89ddff;
+  color: #56b6c2;
+}
+.cm-s-inner .cm-variable {
+  color: var(--code-text-color-);
 }
 
 .cm-s-inner .cm-variable-2 {
   color: #eeffff;
 }
 
-.cm-s-inner .cm-variable-3,
+.cm-s-inner .cm-variable-3{
+  color: #ffe593;
+}
 .cm-s-inner .cm-type {
-  color: #f07178;
+  color: #61afef;
+  /* color: #f07178; */
 }
 
 .cm-s-inner .cm-builtin {
@@ -893,6 +933,7 @@ button.btn-default:not([disabled]):hover,
 
 .cm-s-inner .cm-number {
   color: #ff5370;
+  /* color: #abb2bf; */
 }
 
 .cm-s-inner .cm-def {
@@ -905,15 +946,14 @@ button.btn-default:not([disabled]):hover,
 
 .cm-s-inner .cm-string-2 {
   color: #f07178;
+
 }
 
 .cm-s-inner .cm-comment {
   color: #676e95;
+  
 }
 
-.cm-s-inner .cm-variable {
-  color: #f07178;
-}
 
 .cm-s-inner .cm-tag {
   color: #ff5370;
@@ -935,10 +975,11 @@ button.btn-default:not([disabled]):hover,
   color: #decb6b;
 }
 
-.cm-s-inner .cm-variable-3,
+/* .cm-s-inner .cm-variable-3,
 .cm-s-inner .cm-type {
-  color: #decb6b;
-}
+  color: #c678dd;
+  color: #ffe593;
+} */
 
 .cm-s-inner .cm-error {
   color: rgba(255, 255, 255, 1);
@@ -947,5 +988,36 @@ button.btn-default:not([disabled]):hover,
 
 .cm-s-inner .CodeMirror-matchingbracket {
   text-decoration: underline;
-  color: white !important;
+  color: rgb(255, 255, 255) !important;
+}
+
+@media print {
+  .typora-export * {
+      -webkit-print-color-adjust: exact;
+  }
+  html {
+      font-size: 16px!important;
+  }
+  body {
+      /* font-family: 'Source Han SerifCN', Georgia, Times, 'SimSun', serif!important; */
+      /* font-size: 16px!important; */
+      font-family: Times, 'SimSun', serif!important;
+      color: #000000!important;
+  }
+  p {
+      color: #000000!important;
+  }
+  a {
+      color: var(--primary-color)important;
+      text-decoration: none;
+      border-bottom: 1px solid var(--primary-color);
+      /* border-bottom: 1px solid blue!important; */
+  }
+  table,
+  pre {
+      page-break-inside: avoid;
+  }
+  pre {
+      word-wrap: break-word;
+  }
 }
